--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@ body {
   padding-left: 0;
 }
 
+#container > ul[data-selecting="true"] * {
+  user-select: none;
+  -khtml-user-select: none;
+  -o-user-select: none;
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+}
+
 #container > ul > li {
   display: block;
   list-style: none;
@@ -28,10 +36,15 @@ body {
   max-width: 100%;
   border: solid 1px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  transition: border 0.5s;
 }
 
 #container > ul > li * {
   max-width: 100%;
+}
+
+#container > ul > li[data-selected="true"] {
+  border: dashed 1px blue;
 }
 
 #container > ul > li > button.pin {
