--- a/src/index.css
+++ b/src/index.css
@@ -133,12 +133,14 @@ button {
   min-height: 60px;
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
   padding: 20px 30px;
   margin: 0;
+  z-index: 3;
 }
 
 .navbar button,
-.navbar span {
+.navbar > span {
   background: transparent;
   border: none;
   font-size: 16px;
@@ -159,4 +161,81 @@ button {
   margin: 0;
   padding: 0;
   vertical-align: middle;
+}
+
+.navbar #search {
+  background-color: transparent;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: baseline;
+  max-width: 80%;
+  padding: 4px 8px;
+  position: relative;
+  border-radius: 10px;
+  z-index: 0;
+  filter: grayscale(1);
+  opacity: 0.8;
+  transition: filter 0.25s, opacity 0.25s, box-shadow 0.25s,
+    background-color 0.25s;
+}
+
+.navbar #search:hover {
+  background-color: #ececec;
+}
+
+.navbar #search:focus-within {
+  filter: grayscale(0);
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  opacity: 1;
+}
+
+.navbar #search:before {
+  display: block;
+  content: "";
+  height: 25px;
+  width: 25px;
+  background: url(../assets/search-outline.svg) no-repeat;
+  background-size: contain;
+  flex-grow: 1;
+  position: absolute;
+  left: 25px;
+  top: 8px;
+  z-index: 1;
+}
+
+.navbar #search input {
+  width: 100%;
+  height: 30px;
+  background: transparent;
+  border: none;
+  margin: 0;
+  padding: 0 0 0 60px;
+  display: block;
+  z-index: 2;
+}
+
+.navbar #search input:focus {
+  outline: none;
+}
+
+.navbar #search code {
+  color: #8133ff;
+  padding: 2px 4px;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+  font-family: inherit;
+}
+
+.navbar #search #search-tutorial {
+  margin: 22px;
+}
+
+.navbar #search #search-tutorial {
+  display: none;
+}
+
+.navbar #search:focus-within #search-tutorial {
+  display: block;
 }
