refactor(index.css): change selection area from border to background

--- a/src/index.css
+++ b/src/index.css
@@ -243,7 +243,5 @@ button {
 }
 
 .selection-area {
-  background: transparent;
-  border: 2px solid #8133ff;
-  border-radius: 0.15em;
+  background: rgba(129, 51, 255, 0.5);
 }
